[gd_scene load_steps=6 format=2]

[ext_resource path="res://mesh/items/Item/Item.gd" type="Script" id=1]
[ext_resource path="res://mesh/items/PickUp.gd" type="Script" id=2]
[ext_resource path="res://scenes/game/Selection/Selection.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/game/Interactions/Interactions.tscn" type="PackedScene" id=4]

[sub_resource type="SphereShape" id=1]
radius = 1.1

[node name="Item" type="Spatial"]
script = ExtResource( 1 )

[node name="PickUp" type="Area" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="Range" type="CollisionShape" parent="PickUp"]
shape = SubResource( 1 )

[node name="ClickCollidor" type="StaticBody" parent="."]
collision_mask = 2

[node name="Selection" parent="." instance=ExtResource( 3 )]
visible = false
interactions = NodePath("../Interactions")

[node name="Interactions" parent="." instance=ExtResource( 4 )]

[connection signal="item_clicked" from="PickUp" to="." method="_on_PickUp_item_clicked"]
[connection signal="mouse_entered" from="ClickCollidor" to="." method="_on_PickUpCollidor_mouse_entered"]
[connection signal="mouse_exited" from="ClickCollidor" to="." method="_on_PickUpCollidor_mouse_exited"]

[editable path="Interactions"]
